[workspace]
members = ["transprompt-examples"]

[workspace.package]
edition = "2021"
authors = ["feng liang <feng.liang@kaust.edu.sa>"]
license-file = "LICENSE"
repository = "https://github.com/ifsheldon/transprompt"
homepage = "https://github.com/ifsheldon/transprompt"

[package]
name = "transprompt"
version = "0.7.0"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Prompt-centric framework for developing LLM applications in Rust"

[dependencies]
serde_json = "~1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
lazy_static = "1.4.0"
async-trait = "0.1.68"
log = "0.4"
anyhow = "~1.0"
url = "~2.4"
readonly = "~0.2"
termimad = { version = "0.20", optional = true }

# Database related
qdrant-client = { version = "~1.6", optional = true }
# Token related
tiktoken-rs = "0.5"
# LLM
async-openai = { git = "https://github.com/ifsheldon/async-openai.git", branch = "frontier", default-features = false }

[dev-dependencies]
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
ctrlc = "3.4"

[features]
default = ["terminal_printing", "async-openai/default", "qdrant"]
terminal_printing = ["termimad"]
wasm = ["async-openai/wasm"]
qdrant = ["qdrant-client"]