[workspace]
members = ["transprompt-examples"]

[workspace.package]
edition = "2021"
authors = ["feng liang <feng.liang@kaust.edu.sa>"]
license-file = "LICENSE"
repository = "https://github.com/ifsheldon/transprompt"
homepage = "https://github.com/ifsheldon/transprompt"

[package]
name = "transprompt"
version = "0.13.0-beta"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Prompt-centric framework for developing LLM applications in Rust"
rust-version = "1.80.0"

[dependencies]
serde_json = "~1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
async-trait = "0.1"
log = "0.4"
anyhow = "~1.0"
url = "~2.5"
readonly = "~0.2"
termimad = { version = "0.30", optional = true }

# Database related
qdrant-client = { version = "1.11", optional = true }
# Token related
tiktoken-rs = "0.5"
async-openai-wasm = "=0.20.0-experimental"

[dev-dependencies]
tokio = { version = "1.39", features = ["full"] }
futures = "0.3"
ctrlc = "3.4"

[features]
default = ["terminal_printing", "qdrant"]
terminal_printing = ["termimad"]
qdrant = ["qdrant-client"]